# baxter_robot_controllers

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/baxter_robot_controllers/: baxter_robot_config.hpp  baxter_robot_position_controller.hpp  baxter_robot_velocity_torque_controller.hpp
launch/: both_arm_controllers.launch  left_arm_controllers.launch  position_controller.launch  right_arm_controllers.launch  velocity_controller.launch
src/: baxter_left_arm_position_controller.cpp  baxter_left_arm_velocity_torque_controller.cpp  baxter_right_arm_position_controller.cpp  baxter_right_arm_velocity_torque_controller.cpp
